Updates to include prior D2R data versions